# razer-laptop-control-no-dkms

./: .gitignore  README.md  flake.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  lint.yml  nix.yml  rust.yml  similarissues.yml
ci-helpers/: check-installation.sh
driver/: .gitignore
driver/src/: chroma.c  core.c  core.h  fancontrol.c  razer_common.c
razer_control_gui/: .gitignore  Cargo.toml  README.md  daemon  install.sh
razer_control_gui/data/devices/: laptops.json
razer_control_gui/data/gui/: razer-settings.desktop
razer_control_gui/data/services/openrc/: razercontrol
razer_control_gui/data/services/systemd/: razercontrol.service
razer_control_gui/data/udev/: 99-hidraw-permissions.rules
razer_control_gui/src/: clap_cli.rs  cli.rs  comms.rs  config.rs  daemon.rs  dbus_gnome_screensaver.rs  dbus_mutter_displayconfig.rs  dbus_session_manager.rs  device.rs  driver_sysfs.rs  lib.rs  session_manager_presence.rs
razer_control_gui/src/app/: app.rs
razer_control_gui/src/cli/: cli.rs
razer_control_gui/src/daemon/: battery.rs  daemon.rs  dbus_mutter_idlemonitor.rs  device.rs  login1.rs  screensaver.rs
razer_control_gui/src/daemon/kbd/: board.rs  effects.rs  mod.rs
razer_control_gui/src/kbd/: board.rs  effects.rs  mod.rs
razer_control_gui/src/razer-settings/: error_handling.rs  razer-settings.rs  util.rs  widgets.rs
