[package]
name = "service"
version = "0.2.0"
authors = ["Dimitar Atanasov <datanasov@cpdbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "razer-cli"
path = "src/cli.rs"

[[bin]]
name = "daemon"
path = "src/daemon.rs"

[dependencies]
dbus = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.1.16"
rand = "0.7.3"
lazy_static = "1.4.0"
bincode = "1.3.1"
systemstat = "0.1.5"
hidapi = { version = "1.2.3", default-features = false, features = ["linux-shared-hidraw"] }
serde-big-array = "0.3.0"
