[package]
name = "service"
version = "0.2.0"
authors = ["Dimitar Atanasov <datanasov@cpdbg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "razer-cli"
path = "src/cli/cli.rs"

[[bin]]
name = "daemon"
path = "src/daemon/daemon.rs"

[[bin]]
name = "razer-settings"
path = "src/razer-settings/razer-settings.rs"

[lints.rust]

[lints.clippy]
get_first = "allow"

[dependencies]
dbus = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3.17"
rand = "0.8.5"
lazy_static = "1.4.0"
bincode = "1.3.3"
systemstat = "0.2.3"
hidapi = { version = "2.4.1", default-features = false, features = ["linux-native"] }
serde-big-array = "0.5.1"
clap = { version = "4.4.13", features = ["derive"] }
gtk = "0.18.1"
glib = "0.19.7"
log = "0.4.22"
env_logger = "0.11.5"
